--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,8 +1,13 @@
 // MY THEME COLORS 
-$purple-dark:  #9926f0;
-$purple-light:  #BB6EF5;
-$pink:    #d122e3;
-$footer: #151414;
+// $purple-dark:  #9926f0;
+// $purple-light:  #BB6EF5;
+// $pink:    #d122e3;
+// $footer: #151414;
+
+$purple-dark:  #ffffff;
+$purple-light:  #ffffff;
+$pink:    #ffffff;
+$footer: #ffffff;
 
 // #######################################
 //		NO NEED TO CUSTOM THE GRAY COLOR IF YOU DO NOT
