--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11176,10 +11176,10 @@ textarea.form-control-lg {
 }
 
 .contact-sm a {
-  color: #389ef5;
+  color: #266eab;
 }
 .contact-sm a:hover {
-  color: gray;
+  color: #389ef5;
 }
 
 .campany-list {
